# photo_lens

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ALEMBIC.md  Makefile  README.md  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml
alembic/: __init__.py  env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_add_source_uri.py
backend/: Dockerfile
backend/app/: __init__.py  main.py  schemas.py
backend/app/api/: health.py  ingest.py  websocket.py
backend/app/core/: __init__.py  config.py  database.py  events.py  logging.py
backend/app/models/: __init__.py  photos.py
frontend/: .eslintrc.cjs  Dockerfile  eslint.config.js  package-lock.json  package.json
frontend/static/: app.js  index.html
tests/: README.md  __init__.py  conftest.py  test_config.py  test_health.py  test_main.py  test_zip_stream.py
worker/: run_worker.py
worker/ingestion/: metadata_ingest.py  zip_stream.py
