[project]
name = "lensanalytics"
version = "0.1.0"
description = "Self-hosted, privacy-focused photo analytics engine with local ML embeddings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Pawel Buglewicz", email = "buglewicz@duck.com" }]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy==2.0.36",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "alembic==1.13.2",
    "pgvector>=0.2.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=7.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.7.0",
]

ml = ["torch>=2.0.0", "transformers>=4.30.0", "pillow>=10.0.0"]

[tool.setuptools]
packages = ["backend"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
py_version = 312
combine_as_imports = true
force_single_line = false
skip = ["alembic", ".venv", ".mypy_cache", ".ruff_cache", "htmlcov", "lensanalytics.egg-info"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
target-version = "py312"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
exclude = ["alembic/"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
